welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:9: error: Invalid literal number
        for (i<-1to s >){
                ^Methods:14: error: ')' expected but '}' found.
              } 
              ^